# Old-Trading-Bot

./: .eslintrc.json  .gitignore  CURSOR_GIT_CLARIFICATION.md  CURSOR_GIT_SETUP.md  GITHUB_SETUP.md  QUICK_CURSOR_SETUP.md  cleanup_execution.sh  jest.config.js  jest.setup.js  mkdocs.yml  package.json  tsconfig.json
.devcontainer/: devcontainer.json
AUDIT/: README.md
Trading bot info/: NODERR PROTOCOL_ ENHANCED MASTER IMPLEMENTATION ROADMAP.md  Numerai Integration Thesis for Noderr Trading System.md
cursor_compatible/: .env.example  .eslintrc.json  .gitignore  BACKTEST_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INSTITUTIONAL_UPGRADE_PLAN.md  INTEGRATION_VALIDATION_REPORT.md  LOCAL_TESTING_GUIDE.md  Makefile  NEXT_STEPS.md  PAPER_MODE_PHASE1_REPORT.md  (+28 more)
cursor_compatible/noderr_cli/: Cargo.toml
cursor_compatible/noderr_cli/examples/: generate_anomalies.rs
cursor_compatible/noderr_cli/src/: agent_snapshot.rs  disagreement_engine.rs  federation_sync_engine.rs  federation_voting_api.rs  lib.rs  main.rs  mock_decay_service.rs  mock_engine.rs  mock_strategy_storage.rs  mock_trust_decay_service.rs  mock_trust_score_engine.rs  persistence.rs  reason_chain_executor.rs  reason_exporter.rs  strategy_broadcast_router.rs  trust_decay_service.rs  trust_normalizer.rs
cursor_compatible/noderr_cli/src/commands/: agent_anomaly_monitor.rs  agent_snapshot.rs  arbitration.rs  audit.rs  bio_ethics.rs  bio_roles.rs  bio_signal.rs  bio_simulation.rs  bio_training.rs  constitution.rs  federation.rs  governance.rs  memory.rs  memory_shards.rs  mesh_builder.rs  meta_agents.rs  meta_disagreements.rs  mod.rs  reason_chain.rs  resilience.rs  self_correction.rs  simulate_trust_decay.rs  treasury.rs  trust_chart.rs  trust_decay.rs  trust_history.rs  trust_monitor.rs  trust_regression.rs  trust_show.rs  trust_status.rs  vote_ledger.rs
cursor_compatible/noderr_core/: Cargo.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json
cursor_compatible/noderr_core/benches/: drawdown_monitor_bench.rs  execution_strategy_bench.rs  order_router_bench.rs  risk_calculator_bench.rs  trade_sizer_bench.rs
cursor_compatible/noderr_core/src/: agent_controller.rs  analytics.rs  asset_allocator.rs  bindings.rs  correlation_engine.rs  drawdown.rs  drawdown_monitor.rs  entropy.rs  execution.rs  execution_metrics.rs  execution_strategy.rs  factor_analysis.rs  full_chain_bench.rs  healing_orchestrator.rs  lib.rs  market.rs  market_data.rs  market_regime.rs  memory_service.rs  order_router.rs  orderbook.rs  position.rs  redis.rs  risk.rs  risk_allocation.rs  risk_calc.rs  shared_memory.rs  storage.rs  strategy.rs  strategy_attribution.rs  strategy_engine.rs  strategy_executor.rs  strategy_feedback.rs  telemetry.rs  telemetry_enhanced.rs  telemetry_streamer.rs  trade_sizer.rs  treasury_service.rs  trust_buffer.rs  trust_decay_service.rs  (+4 more)
cursor_compatible/noderr_core/src/api/: analytics_router.rs  auth.rs  mod.rs  storage_router.rs  telemetry_router.rs
cursor_compatible/noderr_core/src/examples/: correlation_example.rs  global_loop_example.rs  mod.rs  regime_allocation_example.rs  risk_strategy_integration.rs  strategy_executor_integration.rs  trust_decay_example.rs  trust_feedback_demo.rs
cursor_compatible/noderr_core/src/execution/: mod.rs  predictive_anti_slippage.rs
cursor_compatible/noderr_core/src/factor_analysis/: mod.rs  redis_engine.rs
cursor_compatible/noderr_core/src/governance/: enforcer.rs  mod.rs  types.rs  violation.rs  violation_log.rs
cursor_compatible/noderr_core/src/governance/federation/: execution.rs  finality.rs  mod.rs  relay.rs  types.rs  vote_tracker.rs
cursor_compatible/noderr_core/src/governance/identity/: anchor.rs  domain_map.rs  examples.rs  mod.rs  provenance.rs  types.rs  verify.rs
cursor_compatible/noderr_core/src/market_regime/: hmm.rs  hmm_detector.rs  leading_indicators.rs  mod.rs  warning_engine.rs
cursor_compatible/noderr_core/src/meta/: meta_agent_service.rs  mod.rs
cursor_compatible/noderr_core/src/microstructure/: mod.rs
cursor_compatible/noderr_core/src/microstructure/footprint/: mod.rs
cursor_compatible/noderr_core/src/microstructure/liquidity/: mod.rs
cursor_compatible/noderr_core/src/microstructure/order_flow/: mod.rs
cursor_compatible/noderr_core/src/microstructure/timing_signals/: mod.rs
cursor_compatible/noderr_core/src/performance/: cpu_affinity.rs  lock_free_structures.rs  market_data_soa.rs  mod.rs  network_optimizer.rs
cursor_compatible/noderr_core/src/risk/: fast_risk_layer.rs
cursor_compatible/noderr_core/src/routing/: mod.rs  venue_scorer.rs  venue_telemetry.rs
cursor_compatible/noderr_core/src/simulation/: mod.rs  trust_decay_simulator.rs
cursor_compatible/noderr_core/src/strategy_executor/: focused.rs
cursor_compatible/noderr_core/src/tests/: risk_manager_tests.rs  trust_decay_simulator_tests.rs
(+1207 files in other folders)
