[package]
name = "noderr_cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for Noderr trading platform"
license = "MIT"

[dependencies]
noderr_core = { path = "../noderr_core" }
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # For YAML serialization
terminal_size = "0.2.5"
rand = "0.8"
async-trait = "0.1"
colored = "2.0"
dirs = "5.0"
ctrlc = "3.4"
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8" 