[package]
name = "noderr_core"
version = "0.1.0"
edition = "2021"
authors = ["Noderr Protocol Foundation"]
description = "High-performance core components for the Noderr trading protocol"
license = "MIT"
repository = "https://github.com/noderr/noderr-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"

# Serialization
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

# Error handling
thiserror = "1.0.40"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# Date and time
chrono = { version = "0.4.24", features = ["serde"] }

# Random number generation
rand = "0.8.5"

# UUID generation
uuid = { version = "1.3.0", features = ["v4", "serde"] }

# NAPI bindings
napi = { version = "2.12.2", optional = true, features = ["tokio_rt", "serde-json"] }
napi-derive = { version = "2.12.2", optional = true }

# Cryptography and security
ring = "0.16.20"
ed25519-dalek = "2.0.0"
x25519-dalek = "2.0.0"
sha2 = "0.10.7"
hmac = "0.12.1"

# Serialization
prost = "0.11.9"
prost-types = "0.11.9"

# Logging and metrics
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"

# Database
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.23.1", features = ["tokio-comp"] }

# gRPC and networking
tonic = "0.9.2"
tonic-build = "0.9.2"
tonic-health = "0.9.2"
hyper = "0.14.27"
tower = "0.4.13"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }

# Configuration and environment
config = "0.13.3"
dotenv = "0.15.0"

# Utilities
itertools = "0.11.0"
futures = "0.3.28"
parking_lot = "0.12.1"
crossbeam-channel = "0.5.8"
once_cell = "1.18.0"

# Decimal types
rust_decimal = { version = "1.30.0", features = ["serde-float"] }
rust_decimal_macros = "1.30.0"

# Linear algebra for HMM implementation
nalgebra = "0.32.3"

# CLI argument parsing
clap = { version = "4.4.6", features = ["derive"] }

# DID and IPFS
did-resolver = { version = "0.5.0", optional = true }
ipfs-api-backend-hyper = { version = "0.6.0", optional = true }

# Added from the code block
dashmap = "5.4.0"
# CPU pinning for performance optimization
core_affinity = "0.8.1"
# NUMA awareness
libnuma = { version = "0.0.4", optional = true }

# Performance optimization dependencies
crossbeam = "0.8"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
rustc-hash = "1.1"
smallvec = "1.11"
jemallocator = "0.5"
mimalloc = { version = "0.1", default-features = false }
ahash = "0.8"
flume = "0.11"
lockfree = "0.5"
arc-swap = "1.6"

# SIMD and vectorization
packed_simd_2 = "0.3"
wide = "0.7"

# Memory pooling
typed-arena = "2.0"
bumpalo = "3.14"

# Networking optimizations
socket2 = "0.5"
libc = "0.2"
nix = "0.27"

# Profiling and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[dev-dependencies]
# Benchmarking
criterion = { version = "0.4", features = ["async_tokio"] }
tokio-test = "0.4.2"

[build-dependencies]
tonic-build = "0.9.2"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
telemetry = ["metrics", "metrics-exporter-prometheus"]
distributed = ["redis"]
sandbox = []
ipfs = ["ipfs-api-backend-hyper"]
did-eth = ["did-resolver"]
numa = ["libnuma"]
jemalloc = ["jemallocator"]
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "noderr_oracle"
path = "src/bin/oracle.rs"

[[bin]]
name = "noderr_guardian"
path = "src/bin/guardian.rs"

[[bin]]
name = "noderr_validator"
path = "src/bin/validator.rs"

[[bin]]
name = "regime_analyzer"
path = "src/bin/regime_analyzer.rs"

[[bench]]
name = "order_router_bench"
harness = false

[[bench]]
name = "risk_calculator_bench"
harness = false

[[bench]]
name = "trade_sizer_bench"
harness = false 